# university-knowledge-assistant

./: .env_example  .gitignore  Anthropology_courses_ingested.json  Courses___Southwestern_University.extraction.json  Dockerfile  README.md  cloudbuild.yaml  config.py  generate_department_requirements.py  local_test.db  main.py  pdf_metadata_extractor.py  pyproject.toml  skill-creatorformarkdown.skill  vector_db.py
Backend/: check_users.py  classify.py  delivery.py  ingestion.py  pdf_metadata_extractor.py  retrieval.py  test_user_db.py  user.py  user_db.py  vector_db.py
Database/: chroma.sqlite3
Frontend/: UI-and-profile-setup.html  example1.html  example1.py  example2.html  example2.py  index.html  index2.html  sign_in_page.html
cli/: main.py  retrieval.py
example_output/: {2026}_{math}_{Math}_{Majoring_&_Minoring}_extracted.md  {2026}_{math}_{Math}_{Majoring_&_Minoring}_metadata.json
ingest/: SKILL_major_ingestion.md  clean_chunks.py  config.py  create_skills_index.py  extract_pdf_text.py  pdf_ingestion.py  step1_parse_clean.py
knowledge_base/: cleaned_courses.json  context_registry.json  courses.json  degree_requirements.json  departments.json  schema-v1.json
logs/: queries.jsonl
output/: Courses • Southwestern University_metadata.json  SU_CS_Overview_extracted.md  SU_CS_Overview_metadata.json  pdfreader_extraction.md
pipeline/: __init__.py  answerer.py  config.py  gemini_client.py  prompts.py  retriever.py  router.py  step1_parse_clean.py
scripts/: create_course_list.py  generate_department_requirements.py  save_pdf.py  schema-v1.json  (+8 more)
(+337 files in other folders)
