[project]
name = "skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "fastapi",
    "chromadb",
    "pymupdf>=1.27.1",
    "pytest>=9.0.2",
    "google-genai>=1.68.0",
]

[project.scripts]
advise = "cli.main:main"
