[project]
name = "skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber",
    "python-dotenv",
    "fastapi",
    "pytest",
    "google-genai",
    "fastapi-users[sqlalchemy]>=15.0.5",
]

[project.scripts]
advise = "cli.main:main"
