[project]
name = "skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber",
    "python-dotenv",
    "fastapi",
    "markdown",          # converts LLM markdown output to HTML for the browser
    "python-multipart",  # required to parse HTML form submissions (hx-post)
    "pytest",
    "google-genai",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "pymysql>=1.1.2",
    "itsdangerous>=2.2.0",
    "google-auth>=2.49.1",
]

[project.scripts]
advise = "cli.main:main"
